--- a/src/index.css
+++ b/src/index.css
@@ -93,15 +93,15 @@ code {
 }
 
 .cart-logo {
-  width: 60px; /* Adjust the size as needed */
+  width: 60px;
   height: auto;
 }
 
 #home-hero-container {
   display: flex;
-  align-items: center; /* Align items vertically center */
-  justify-content: space-between; /* Space out items */
-  flex-wrap: wrap; /* Wrap items if necessary */
+  align-items: center;
+  justify-content: space-between; 
+  flex-wrap: wrap; 
   margin: 20px;
 }
 
@@ -122,9 +122,9 @@ code {
 
 #home-page-hero-image {
   flex: 1;
-  width: 100%; /* Scale to the width of the container */
+  width: 100%; 
   height: auto;
-  object-fit: cover; /* Cover the container */
+  object-fit: cover; 
   border-bottom: 1px solid lightgray;
   border-radius: 5px;
   justify-content: center;
@@ -134,8 +134,8 @@ code {
 .products-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; /* Center the product cards */
-  gap: 10px; /* Add gap between product cards */
+  justify-content: center; 
+  gap: 10px; 
   padding: 10px;
   margin-bottom: 35px;
 }
@@ -223,13 +223,13 @@ div[class*="price"]::before {
   align-items: center;
   justify-content: space-between;
   margin-top: 20px;
-  flex-wrap: wrap; /* Wrap content on smaller screens */
+  flex-wrap: wrap; 
 }
 
 .about-us-image-container {
   flex: 1;
   margin-right: 20px;
-  text-align: center; /* Center image on smaller screens */
+  text-align: center; 
 }
 
 #about-us-image {
@@ -255,13 +255,13 @@ div[class*="price"]::before {
   align-items: center;
   justify-content: space-between;
   margin-top: 20px;
-  flex-wrap: wrap; /* Wrap content on smaller screens */
+  flex-wrap: wrap; 
 }
 
 .home-hero-image-container {
   flex: 1;
   margin-right: 20px;
-  text-align: center; /* Center image on smaller screens */
+  text-align: center;
   padding: 20px;
 }
 
@@ -470,30 +470,30 @@ input[type="submit"]:hover {
     max-width: 400px;
   }
   .about-us-container {
-    flex-direction: column; /* Stack image above text */
-    align-items: center; /* Center content horizontally */
+    flex-direction: column; 
+    align-items: center;
   }
   .about-us-image-container {
     margin-right: 0px;
-    margin-bottom: 20px; /* Add space below the image */
+    margin-bottom: 20px; 
   }
   #home-hero-image {
     margin-left: auto;
     margin-right: auto;
-    display: block; /* Center the image */
+    display: block; 
   }
   .home-hero-container {
-    flex-direction: column; /* Stack image above text */
-    align-items: center; /* Center content horizontally */
+    flex-direction: column; 
+    align-items: center; 
   }
   .home-hero-image-container {
     margin-right: 0px;
-    margin-bottom: 20px; /* Add space below the image */
+    margin-bottom: 20px; 
   }
   #home-hero-image {
     margin-left: auto;
     margin-right: auto;
-    display: block; /* Center the image */
+    display: block; 
   }
   .product-image {
     max-height: 400px;
